Creating a Salon booking website

--- a/Full Stack Project/index.html
+++ b/Full Stack Project/index.html
@@ -13,12 +13,11 @@
     <div class="relative-box">
       <!-- Navigation -->
         <nav class="navbar">
-           <input type="checkbox" id="menu-toggle">
-
+          <input type="checkbox" id="menu-toggle">
           <!-- Hamburger Icon -->
           <label for="menu-toggle" class="hamburger">☰</label>
         <ul id="nav-menu">
-            <li><a href="home.html" class="active">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="services.html">Services</a></li>
@@ -32,6 +31,17 @@
         <p>Capturing Moments, One Shot at a Time</p>
     </div>
   </header>
+
+
+  <main>
+    <section class="intro-section">
+      <h1>Welcome to shot0n_target Photography</h1>
+      <p>Your go-to destination for stunning photography that captures the essence of every moment. 
+        Whether it's portraits, events, or landscapes, we bring your vision to life with creativity and professionalism.
+      </p>
+    </section>
+  </main>
+
 
   <footer>
     <hr>
