--- a/Full Stack Project/portfolio.html
+++ b/Full Stack Project/portfolio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About - shot0n_target Photography</title>
+  <title>Portfolio - shot0n_target Photography</title>
   <link rel="stylesheet" href="portfoliostyle.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
                 <label for="menu-toggle" class="hamburger">☰</label>
                 
                 <ul id="nav-menu">
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="portfolio.html" class="active">Portfolio</a></li>
                     <li><a href="services.html">Services</a></li>
@@ -51,9 +51,37 @@
         </div>
     </main>
 
-    <main>
-    
+    <main class="items">
+        <div class="portfolio-item">
+            <h1>Urban Exploration</h1>
+            <p>Capturing the essence of city life through my lens.</p>
+            <div class="pictures">
+                <img src="city1.jpg" alt="Cityscape 1">
+                <img src="city2.jpg" alt="Cityscape 2">
+                <img src="city3.jpg" alt="Cityscape 3">
+                <img src="city4.jpg" alt="Cityscape 4">
+            </div>
+        </div>
     </main>
 
+    <main class="items">
+        <div class="portfolio-item">
+            <h1>Nature's Wonders</h1>
+            <p>A glimpse into the beauty of the natural world.</p>
+            <div class="pictures">
+                <img src="nature1.jpg" alt="Nature Scene 1">
+                <img src="nature2.jpg" alt="Nature Scene 2">
+                <img src="nature3.jpg" alt="Nature Scene 3">
+                <img src="nature4.jpg" alt="Nature Scene 4">
+            </div>
+        </div>
+
+
+    <footer>
+        <hr>
+        <h1><strong>Thank you for visiting Our Website!</strong></h1>
+        <h3>© 2025 Olamide Tadagbe. All rights reserved.</h3>
+        <hr>
+      </footer>
 </body>
 </html>
