Created the frontend of the booking web

--- a/ART/index.html
+++ b/ART/index.html
@@ -43,7 +43,7 @@
             </header>
 
             <section>
-                <div id="home" class="page">
+                <div id="home" >
                         <div class="video">
                             <p>ART SHOP online video</p> 
                             <iframe width= "400" height="345" 
@@ -67,8 +67,7 @@
 
         <main>
             <section id="paint" class="section-products">
-                <div class="page">
-
+            
                     <div class="product-list">
                         <section class="products">
                             
