Front-end completed

--- a/Salon booking web/create-account.html
+++ b/Salon booking web/create-account.html
@@ -15,7 +15,7 @@
   <main class="register">
     <div class="details">
 
-      <form method="post">
+      <form method="post" action="register.php">
           <h2>Create Your Account</h2>
 
           <label for="newUser">Username:</label>
