--- a/Salon booking web/header.html
+++ b/Salon booking web/header.html
@@ -1,7 +1,7 @@
 <div class="header-section">
 
   <a href="index.html">
-    <img src="IMAGES/VANITY SALON.png" class="Picture" alt="logo">
+    <img src="VANITY SALON.png" class="Picture" alt="logo">
   </a>
 
   <input type="text" placeholder="Search products..." name="search">
@@ -22,11 +22,11 @@
   </nav>
 
   <a href="cart.html">
-    <img src="IMAGES/cart.png" class="cart-icon" alt="Cart">
+    <img src="cart.png" class="cart-icon" alt="Cart">
   </a>
 
   <a href="Profile.html">
-    <img src="IMAGES/profile.png" class="profile-icon" alt="Profile">
+    <img src="profile.png" class="profile-icon" alt="Profile">
   </a>
 
 </div>
