--- a/Salon booking web/footer.html
+++ b/Salon booking web/footer.html
@@ -4,7 +4,7 @@
 
     <div class="footer-col">
       <a href="index.html">
-        <img src="IMAGES/VANITY SALON.png" class="Picture" alt="logo">
+        <img src="VANITY SALON.png" class="Picture" alt="logo">
       </a>
       <p>Your trusted beauty and wellness destination.  
         Book appointments, shop products, and experience premium salon services.
@@ -31,8 +31,8 @@
     <div class="footer-col">
       <h3>Follow Us</h3>
       <div class="social-icons">
-        <a href="#"><img src="IMAGES/facebook.png" alt="Facebook"></a>
-        <a href="#"><img src="instagram.png"></a>
+        <a href="#"><img src="facebook.png"></a>
+        <a href="#"><img src="Instagram.png"></a>
         <a href="#"><img src="tiktok.png"></a>
       </div>
     </div>
